--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
-    "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015-webpack": "^6.3.14",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.0",
     "chai": "^1.9.2",
     "css-loader": "^0.8.0",
     "eslint": "^1.6.0",
@@ -31,9 +29,8 @@
     "style-loader": "^0.8.0",
     "surge": "^0.16.0",
     "svg-sprite-loader": "0.0.11",
-    "webpack": "2.0.7-beta",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack": "^2.1.0-beta.4",
+    "webpack-dev-server": "^2.0.0-beta"
   },
   "dependencies": {
     "classnames": "^1.1.4",
@@ -64,7 +61,7 @@
     "dev": "npm run clean && npm run copy && npm run dev-server",
     "clean": "rm -rf _public && mkdir _public",
     "copy": "cp -R src/assets/* _public && cp src/assets/index.html _public/200.html",
-    "dev-server": "node devServer.js",
+    "dev-server": "webpack-dev-server -d --port=5003 --content-base=_public --history-api-fallback",
     "version": "npm run build"
   }
 }
