--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "lodash": "^4.3.0",
     "mime": "^1.2.11",
     "node-static": "^0.7.6",
-    "react": "^15.0.0-rc.1",
-    "react-dom": "^15.0.0-rc.1",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
     "react-motion": "^0.3.1",
     "react-router": "^2.0.0",
     "soundmanager2": "2.97.20150601"
