--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-motion": "^0.4.2",
+    "react-responsive": "^1.1.2",
     "react-router": "^2.0.0",
     "soundmanager2": "2.97.20150601"
   },
