--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "style-loader": "^0.13.1",
     "surge": "^0.17.7",
     "svg-sprite-loader": "0.0.18",
-    "webpack": "^2.1.0-beta.4",
-    "webpack-dev-server": "^2.0.0-beta"
+    "webpack": "2.1.0-beta.7",
+    "webpack-dev-server": "2.1.0-beta.0"
   },
   "dependencies": {
     "classnames": "^2.2.3",
