--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expose-loader": "^0.7.1",
     "postcss-loader": "^0.8.2",
     "postcss-simple-vars": "^1.0.1",
+    "react-addons-perf": "^15.2.1",
     "style-loader": "^0.13.1",
     "surge": "^0.17.7",
     "svg-sprite-loader": "0.0.18",
