--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "postcss-loader": "^0.8.2",
     "postcss-simple-vars": "^1.0.1",
     "react-addons-perf": "^15.2.1",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
     "style-loader": "^0.13.1",
     "surge": "^0.17.7",
     "svg-sprite-loader": "0.0.18",
@@ -38,8 +41,10 @@
     "react-dom": "^15.0.0",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-motion": "^0.4.2",
+    "react-redux": "^4.4.5",
     "react-responsive": "^1.1.2",
     "react-router": "^4.0.0-alpha.3",
+    "redux": "^3.5.2",
     "soundmanager2": "2.97.20150601"
   },
   "engines": {
