--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-addons-perf": "^15.2.1",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-filter-actions": "^1.2.0",
     "redux-devtools-log-monitor": "^1.0.11",
     "style-loader": "^0.13.1",
     "surge": "^0.17.7",
