--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-hot-loader": "^3.0.0-beta.2",
     "react-motion": "^0.4.2",
     "react-responsive": "^1.1.2",
-    "react-router": "^2.0.0",
+    "react-router": "^4.0.0-alpha.3",
     "soundmanager2": "2.97.20150601"
   },
   "engines": {
