--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015-webpack": "^6.3.14",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "expose-loader": "^0.7.1",
