--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "deploy": "surge -p _public -d music.activeobject.me",
     "dev": "npm run clean && npm run copy && npm run dev-server",
     "clean": "rm -rf _public && mkdir _public",
-    "copy": "cp index.html manifest.json _public/ && cp index.html _public/200.html",
+    "copy": "cp src/index.html src/manifest.json _public/ && cp src/index.html _public/200.html",
     "dev-server": "webpack-dev-server -d --port 5003 --hot --env development",
     "version": "npm run build"
   }
